@@ -600,7 +600,7 @@ def _parse(source, state):
                         if not name:
                             raise error("missing group name")
                         if not name.isidentifier():
-                            raise error("bad character in group name")
+                            raise error("bad character in group name %r" % name)
                     elif sourcematch("="):
                         # named backreference
                         name = ""
@@ -614,7 +614,8 @@ def _parse(source, state):
                         if not name:
                             raise error("missing group name")
                         if not name.isidentifier():
-                            raise error("bad character in group name")
+                            raise error("bad character in backref group name "
+                                        "%r" % name)
                         gid = state.groupdict.get(name)
                         if gid is None:
                             raise error("unknown group name")
