@@ -805,6 +805,7 @@ Piotr Meyer
 Alexis Métaireau
 Steven Miale
 Trent Mick
+Jason Michalski
 Franck Michea
 Tom Middleton
 Stan Mihai
